fix: add scrollbar in select component page

--- a/src/ui/styles/component_widget.css
+++ b/src/ui/styles/component_widget.css
@@ -8,7 +8,7 @@ QFrame#ComponentWidget {
   border: none;
   outline: none;
 
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 QFrame#ComponentWidget::hover {
